[package]
name = "test_deps"
version = "0.1.0"
authors = ["nshou <nshou@coronocoya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
test_deps_if = {path = "test_deps_if"}

[dev-dependencies]
rand = "0.8"
tokio = {version = "1.5", features = ["rt", "macros", "time"]}
