[lib]
proc-macro = true

[package]
name = "test_deps_if"
license = "MIT"
description = "A helper crate for test_deps"
readme = "README.md"
version = "0.1.0"
authors = ["nshou <nshou@coronocoya.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0"
